--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@packula/GITHUB_REPO_NAME",
+  "name": "@packula/router-path-extras",
   "version": "0.0.0",
-  "description": "REPLACE_ME",
-  "repository": "packula/GITHUB_REPO_NAME",
-  "bugs": "https://github.com/packula/GITHUB_REPO_NAME/issues",
-  "homepage": "https://packula.dev/",
+  "description": "Additional parameter types for Packula router path",
+  "repository": "packula/router-path-extras",
+  "bugs": "https://github.com/packula/router-path-extras/issues",
+  "homepage": "https://packula.dev",
   "author": "Erin Millard <ezzatron@gmail.com>",
   "license": "MIT",
   "publishConfig": {
@@ -23,11 +23,18 @@
   "scripts": {
     "prepare": "rollup --config rollup.config.js"
   },
+  "dependencies": {
+    "@packula/regexp": "^0.1.1"
+  },
+  "peerDependencies": {
+    "@packula/router-path": "^0.2.0"
+  },
   "devDependencies": {
     "@packula/eslint-config": "^1.1.1",
     "@packula/jest-config": "^1.0.1",
-    "@packula/rollup-config": "^1.0.1",
-    "@packula/tsconfig": "^1.0.0",
+    "@packula/rollup-config": "^1.1.1",
+    "@packula/router-path": "^0.2.0",
+    "@packula/tsconfig": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "codecov": "^3.0.2",
