--- a/.github/workflows/ci-scheduled.yml
+++ b/.github/workflows/ci-scheduled.yml
@@ -1,7 +1,7 @@
-name: CI
+name: CI (scheduled)
 on:
-  push:
-  pull_request:
+  schedule:
+  - cron: 0 14 * * 0 # Sunday 2PM UTC = Monday 12AM AEST
 jobs:
   ci:
     name: CI
@@ -17,5 +17,3 @@ jobs:
       run: make node_modules
     - name: Make
       run: make ci
-    - name: Publish coverage
-      uses: codecov/codecov-action@v2
