--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "node": ">=14"
   },
   "scripts": {
-    "prepare": "rollup --config rollup.config.js"
+    "prepare": "rollup --config rollup.config.js",
+    "size-limit-build": "rollup --config rollup.config.js",
+    "size-limit-clean": "rm -rf dist"
   },
   "dependencies": {
     "@snout/regexp": "^0.2.1"
@@ -30,6 +32,7 @@
     "@snout/router-path": "^0.2.2"
   },
   "devDependencies": {
+    "@size-limit/preset-small-lib": "^5.0.3",
     "@snout/eslint-config": "^2.0.0",
     "@snout/jest-config": "^1.0.2",
     "@snout/rollup-config": "^1.1.2",
@@ -43,6 +46,7 @@
     "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
+    "size-limit": "^5.0.3",
     "typescript": "^4.2.3"
   }
 }
