Publish dist artifacts

--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -26,3 +26,8 @@ jobs:
       run: npm publish --access public
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+    - name: Publish dist artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: dist
+        path: dist
