--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,9 @@ jobs:
       run: make ci
     - name: Publish coverage
       uses: codecov/codecov-action@v2
+    - name: Publish dist artifact
+      if: github.ref == 'refs/heads/main'
+      uses: actions/upload-artifact@v2
+      with:
+        name: dist
+        path: dist
