Use prepublishOnly script instead of prepare

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "node": ">=14"
   },
   "scripts": {
-    "prepare": "rollup --config rollup.config.js",
+    "prepublishOnly": "rollup --config rollup.config.js",
     "size-limit-build": "rollup --config rollup.config.js",
     "size-limit-clean": "rm -rf dist"
   },
