--- a/.github/workflows/ci-scheduled.yml
+++ b/.github/workflows/ci-scheduled.yml
@@ -4,16 +4,4 @@ on:
   - cron: 0 14 * * 0 # Sunday 2PM UTC = Monday 12AM AEST
 jobs:
   ci:
-    name: CI
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-    - name: Install dependencies
-      run: make node_modules
-    - name: Make
-      run: make ci
+    uses: snout-router/.github/.github/workflows/ci-scheduled.yml@main
