--- a/.github/workflows/ci-scheduled.yml
+++ b/.github/workflows/ci-scheduled.yml
@@ -4,4 +4,5 @@ on:
   - cron: 0 14 * * 0 # Sunday 2PM UTC = Monday 12AM AEST
 jobs:
   ci:
+    name: Snout
     uses: snout-router/.github/.github/workflows/ci-scheduled.yml@main
