Upgrade to new linting setup

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,9 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "artifacts/dist",
+    "outDir": "artifacts/dist"
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
