--- a/package.json
+++ b/package.json
@@ -42,17 +42,11 @@
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "^7.0.3",
-    "@snout/eslint-config": "^2.0.0",
+    "@snout/eslint-config": "^3.2.2",
     "@snout/jest-config": "^2.1.0",
     "@snout/router-path": "^0.7.2",
     "@snout/tsconfig": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.21.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jest": "^25.2.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
+    "prettier": "^2.7.1",
     "size-limit": "^7.0.4",
     "typescript": "^4.4.3"
   }
