--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@snout/router-path": "^0.7.2",
     "@snout/tsconfig": "^2.0.0",
     "prettier": "^2.7.1",
+    "prettier-plugin-organize-imports": "^3.0.0",
     "size-limit": "^7.0.4",
     "typescript": "^4.4.3"
   }
