--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "prettier-plugin-organize-imports": "^3.0.0",
     "size-limit": "^7.0.4",
     "typescript": "^4.4.3"
+  },
+  "resolutions": {
+    "yargs-parser": "21.0.1"
   }
 }
